# cortexbot

./: LICENSE  README.md  config.example.yaml  pyproject.toml
prompts/: autonomous.md  design_phase.md  identity.md  implement_phase.md  merge_phase.md  plan_phase.md  supervised.md  test_phase.md
src/cortexbot/: __init__.py  config.py  log.py  main.py
src/cortexbot/bot/: commands.py  media.py  telegram.py
src/cortexbot/chat/: session.py  store.py
src/cortexbot/claude/: cli.py  prompt_builder.py  prompts.py  stream_parser.py
src/cortexbot/cli/: init.py
src/cortexbot/events/: bus.py  telegram_handler.py
src/cortexbot/health/: __init__.py  preflight.py
src/cortexbot/memory/: artifacts.py  session_rotation.py  store.py
src/cortexbot/orchestrator/: action_tools.py  autonomy.py  phase_gates.py  phase_tools.py  session_manager.py  task_manager.py
src/cortexbot/services/: unreal.py
tests/: conftest.py  test_action_tools.py  test_artifacts.py  test_autonomy.py  test_chat_session.py  test_chat_store.py  test_cli.py  test_commands.py  test_config.py  test_crash_recovery.py  test_editor_service.py  test_event_bus.py  test_init.py  test_log.py  test_media.py  test_phase_gates.py  test_phase_tools.py  test_preflight.py  test_prompt_builder.py  test_prompts.py  test_session_manager.py  test_session_rotation.py  test_store.py  test_stream_parser.py  test_task_state.py  test_telegram_handler.py  test_unreal_service.py
