[project]
name = "cortexbot"
version = "2.0.0"
description = "Telegram bot orchestrating Claude Code CLI sessions for Unreal Engine development"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "cortex-mcp",
]

[project.scripts]
cortexbot = "cortexbot.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cortex-mcp = { path = "../../UnrealProjects/CortexSandboxMirror/Plugins/UnrealCortex/MCP" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
